--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
  <section class='container'>
   <hgroup>
-    <h1>Welcome to your static httpd application on 123455 Webhookilla muokattu OpenShift 123455</h1>
+    <h1>Welcome to your static httpd application on 12345566 Webhookilla muokattu OpenShift 12345566</h1>
   </hgroup>
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
